Completed 'Player' layout

--- a/index.html
+++ b/index.html
@@ -9,6 +9,121 @@
 </head>
 <body>
     
+    <div class="wrapper">
+        <div class="container">
+            <div class="player-wrapper">
+                <div class="player">
+                    <div class="song-block">
+                        <div class="song__image-block">
+                            <img src="img/songs/1.jpg" alt="Song" class="image">
+                        </div>
+                        <div class="song__name"></div>
+                        <div class="song__range-wrapper">
+                            <div class="song__range">
+                                <input type="range" class="controls">
+                            </div>
+                            <div class="time-block">
+                                <div class="time__from"></div>
+                                <div class="time__to"></div>
+                            </div>
+                        </div>
+                        <div class="song__controls">
+                            <button class="shuffle">
+                                <img src="img/shuffle.png" alt="shuffle" class="shuffle__icon">
+                            </button>
+                            <div class="contorls-block">
+                                <button class="prev">
+                                    <img src="img/prev.png" alt="prev" class="shuffle__icon">
+                                </button>
+                                <button class="action play">
+                                    <img src="img/action.png" alt="action" class="shuffle__icon">
+                                </button>
+                                <button class="next">
+                                    <img src="img/next.png" alt="next" class="shuffle__icon">
+                                </button>
+                            </div>
+                            <button class="repeat">
+                                <img src="img/repeat.png" alt="repeat" class="shuffle__icon">
+                            </button>
+                        </div>
+                    </div>
+                    <div class="list-block">
+                        <div class="item">
+                            <div class="item__image-block">
+                                <img src="img/song/1.png" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </div>
+                        <div class="item">
+                            <div class="item__image-block">
+                                <img src="img/song/1.png" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </div>
+                        <div class="item">
+                            <div class="item__image-block">
+                                <img src="img/song/1.png" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </div>
+                        <div class="item">
+                            <div class="item__image-block">
+                                <img src="img/song/1.png" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </div>
+                        <div class="item">
+                            <div class="item__image-block">
+                                <img src="img/song/1.png" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </div>
+                        <div class="item">
+                            <div class="item__image-block">
+                                <img src="img/song/1.png" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </div>
+                        <div class="item">
+                            <div class="item__image-block">
+                                <img src="img/song/1.png" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </div>
+                        <div class="item">
+                            <div class="item__image-block">
+                                <img src="img/song/1.png" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </div>
+                        <div class="item">
+                            <div class="item__image-block">
+                                <img src="img/song/1.png" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </div>
+                        <div class="item">
+                            <div class="item__image-block">
+                                <img src="img/song/1.png" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script type="module" src="js/common.js"></script>
 </body>
 </html>
