Created 'img' folder. Changed path to images

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                     <img src="img/action.png" alt="action" class="shuffle__icon">
                                 </button>
                                 <button class="next">
-                                    <img src="img/next.png" alt="next" class="shuffle__icon">
+                                    <img src="img/prev.png" alt="next" class="shuffle__icon">
                                 </button>
                             </div>
                             <button class="repeat">
@@ -50,70 +50,70 @@
                     <div class="list-block">
                         <div class="item">
                             <div class="item__image-block">
-                                <img src="img/song/1.png" alt="Image" class="image">
+                                <img src="img/songs/1.jpg" alt="Image" class="image">
                             </div>
                             <div class="item__name">Song name</div>
                             <div class="item__time">3:18</div>
                         </div>
                         <div class="item">
                             <div class="item__image-block">
-                                <img src="img/song/1.png" alt="Image" class="image">
+                                <img src="img/songs/1.jpg" alt="Image" class="image">
                             </div>
                             <div class="item__name">Song name</div>
                             <div class="item__time">3:18</div>
                         </div>
                         <div class="item">
                             <div class="item__image-block">
-                                <img src="img/song/1.png" alt="Image" class="image">
+                                <img src="img/songs/1.jpg" alt="Image" class="image">
                             </div>
                             <div class="item__name">Song name</div>
                             <div class="item__time">3:18</div>
                         </div>
                         <div class="item">
                             <div class="item__image-block">
-                                <img src="img/song/1.png" alt="Image" class="image">
+                                <img src="img/songs/1.jpg" alt="Image" class="image">
                             </div>
                             <div class="item__name">Song name</div>
                             <div class="item__time">3:18</div>
                         </div>
                         <div class="item">
                             <div class="item__image-block">
-                                <img src="img/song/1.png" alt="Image" class="image">
+                                <img src="img/songs/1.jpg" alt="Image" class="image">
                             </div>
                             <div class="item__name">Song name</div>
                             <div class="item__time">3:18</div>
                         </div>
                         <div class="item">
                             <div class="item__image-block">
-                                <img src="img/song/1.png" alt="Image" class="image">
+                                <img src="img/songs/1.jpg" alt="Image" class="image">
                             </div>
                             <div class="item__name">Song name</div>
                             <div class="item__time">3:18</div>
                         </div>
                         <div class="item">
                             <div class="item__image-block">
-                                <img src="img/song/1.png" alt="Image" class="image">
+                                <img src="img/songs/1.jpg" alt="Image" class="image">
                             </div>
                             <div class="item__name">Song name</div>
                             <div class="item__time">3:18</div>
                         </div>
                         <div class="item">
                             <div class="item__image-block">
-                                <img src="img/song/1.png" alt="Image" class="image">
+                                <img src="img/songs/1.jpg" alt="Image" class="image">
                             </div>
                             <div class="item__name">Song name</div>
                             <div class="item__time">3:18</div>
                         </div>
                         <div class="item">
                             <div class="item__image-block">
-                                <img src="img/song/1.png" alt="Image" class="image">
+                                <img src="img/songs/1.jpg" alt="Image" class="image">
                             </div>
                             <div class="item__name">Song name</div>
                             <div class="item__time">3:18</div>
                         </div>
                         <div class="item">
                             <div class="item__image-block">
-                                <img src="img/song/1.png" alt="Image" class="image">
+                                <img src="img/songs/1.jpg" alt="Image" class="image">
                             </div>
                             <div class="item__name">Song name</div>
                             <div class="item__time">3:18</div>
