Added new images. Minor 'css' fix

--- a/index.html
+++ b/index.html
@@ -17,107 +17,142 @@
                         <div class="song__image-block">
                             <img src="img/songs/1.jpg" alt="Song" class="image">
                         </div>
-                        <div class="song__name"></div>
+                        <div class="song__name">Song name</div>
                         <div class="song__range-wrapper">
                             <div class="song__range">
-                                <input type="range" class="controls">
+                                <input type="range" class="controls" min="0" max="100">
                             </div>
                             <div class="time-block">
-                                <div class="time__from"></div>
-                                <div class="time__to"></div>
+                                <div class="time__from">0:00</div>
+                                <div class="time__to">3:18</div>
                             </div>
                         </div>
                         <div class="song__controls">
-                            <button class="shuffle">
-                                <img src="img/shuffle.png" alt="shuffle" class="shuffle__icon">
+                            <button class="button shuffle">
+                                <img src="img/shuffle.png" alt="shuffle" class="icon">
                             </button>
                             <div class="contorls-block">
-                                <button class="prev">
-                                    <img src="img/prev.png" alt="prev" class="shuffle__icon">
+                                <button class="button prev">
+                                    <img src="img/prev.png" alt="prev" class="icon">
                                 </button>
-                                <button class="action play">
-                                    <img src="img/action.png" alt="action" class="shuffle__icon">
+                                <button class="button action play">
+                                    <img src="img/action.png" alt="action" class="icon">
                                 </button>
-                                <button class="next">
-                                    <img src="img/prev.png" alt="next" class="shuffle__icon">
+                                <button class="button next">
+                                    <img src="img/prev.png" alt="next" class="icon">
                                 </button>
                             </div>
-                            <button class="repeat">
-                                <img src="img/repeat.png" alt="repeat" class="shuffle__icon">
+                            <button class="button repeat">
+                                <img src="img/repeat.png" alt="repeat" class="icon">
                             </button>
                         </div>
                     </div>
                     <div class="list-block">
-                        <div class="item">
+                        <button class="item">
                             <div class="item__image-block">
                                 <img src="img/songs/1.jpg" alt="Image" class="image">
                             </div>
                             <div class="item__name">Song name</div>
                             <div class="item__time">3:18</div>
-                        </div>
-                        <div class="item">
+                        </button>
+                        <button class="item">
+                            <div class="item__image-block">
+                                <img src="img/songs/2.jpg" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </button>
+                        <button class="item">
+                            <div class="item__image-block">
+                                <img src="img/songs/3.jpg" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </button>
+                        <button class="item">
+                            <div class="item__image-block">
+                                <img src="img/songs/4.jpg" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </button>
+                        <button class="item">
                             <div class="item__image-block">
                                 <img src="img/songs/1.jpg" alt="Image" class="image">
                             </div>
                             <div class="item__name">Song name</div>
                             <div class="item__time">3:18</div>
-                        </div>
-                        <div class="item">
+                        </button>
+                        <button class="item">
+                            <div class="item__image-block">
+                                <img src="img/songs/2.jpg" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </button>
+                        <button class="item">
+                            <div class="item__image-block">
+                                <img src="img/songs/3.jpg" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </button>
+                        <button class="item">
+                            <div class="item__image-block">
+                                <img src="img/songs/4.jpg" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </button>
+                        <button class="item">
                             <div class="item__image-block">
                                 <img src="img/songs/1.jpg" alt="Image" class="image">
                             </div>
                             <div class="item__name">Song name</div>
                             <div class="item__time">3:18</div>
-                        </div>
-                        <div class="item">
+                        </button>
+                        <button class="item">
+                            <div class="item__image-block">
+                                <img src="img/songs/2.jpg" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </button>
+                        <button class="item">
+                            <div class="item__image-block">
+                                <img src="img/songs/3.jpg" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </button>
+                        <button class="item">
+                            <div class="item__image-block">
+                                <img src="img/songs/4.jpg" alt="Image" class="image">
+                            </div>
+                            <div class="item__name">Song name</div>
+                            <div class="item__time">3:18</div>
+                        </button>
+                        <button class="item">
                             <div class="item__image-block">
                                 <img src="img/songs/1.jpg" alt="Image" class="image">
                             </div>
                             <div class="item__name">Song name</div>
                             <div class="item__time">3:18</div>
-                        </div>
-                        <div class="item">
+                        </button>
+                        <button class="item">
                             <div class="item__image-block">
-                                <img src="img/songs/1.jpg" alt="Image" class="image">
+                                <img src="img/songs/2.jpg" alt="Image" class="image">
                             </div>
                             <div class="item__name">Song name</div>
                             <div class="item__time">3:18</div>
-                        </div>
-                        <div class="item">
+                        </button>
+                        <button class="item">
                             <div class="item__image-block">
-                                <img src="img/songs/1.jpg" alt="Image" class="image">
+                                <img src="img/songs/3.jpg" alt="Image" class="image">
                             </div>
                             <div class="item__name">Song name</div>
                             <div class="item__time">3:18</div>
-                        </div>
-                        <div class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/1.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </div>
-                        <div class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/1.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </div>
-                        <div class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/1.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </div>
-                        <div class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/1.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </div>
+                        </button>
                     </div>
                 </div>
             </div>
