Changed covers. Added event listeners to some buttons

--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
                 <div class="player">
                     <div class="song-block">
                         <div class="song__image-block">
-                            <img src="img/songs/1.jpg" alt="Song" class="image">
+                            <img src="" alt="Song" class="cover image">
                         </div>
-                        <div class="song__name">Song name</div>
+                        <div class="song__name">1</div>
                         <div class="song__range-wrapper">
                             <div class="song__range">
-                                <input type="range" class="controls" min="0" max="100">
+                                <audio class="audio" src="music/Skeler - ID1.mp3"></audio>
+                                <div class="controls">
+                                    <div class="progress"></div>
+                                    <div class="thumb"></div>
+                                </div>
                             </div>
                             <div class="time-block">
                                 <div class="time__from">0:00</div>
@@ -48,111 +52,13 @@
                         </div>
                     </div>
                     <div class="list-block">
-                        <button class="item">
+                        <!-- <button class="item">
                             <div class="item__image-block">
-                                <img src="img/songs/1.jpg" alt="Image" class="image">
+                                <img src="" alt="Image" class="image">
                             </div>
                             <div class="item__name">Song name</div>
                             <div class="item__time">3:18</div>
-                        </button>
-                        <button class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/2.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </button>
-                        <button class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/3.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </button>
-                        <button class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/4.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </button>
-                        <button class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/1.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </button>
-                        <button class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/2.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </button>
-                        <button class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/3.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </button>
-                        <button class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/4.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </button>
-                        <button class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/1.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </button>
-                        <button class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/2.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </button>
-                        <button class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/3.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </button>
-                        <button class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/4.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </button>
-                        <button class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/1.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </button>
-                        <button class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/2.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </button>
-                        <button class="item">
-                            <div class="item__image-block">
-                                <img src="img/songs/3.jpg" alt="Image" class="image">
-                            </div>
-                            <div class="item__name">Song name</div>
-                            <div class="item__time">3:18</div>
-                        </button>
+                        </button> -->
                     </div>
                 </div>
             </div>
