Changed icons. Minor script changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
@@ -33,21 +34,21 @@
                         </div>
                         <div class="song__controls">
                             <button class="button shuffle">
-                                <img src="img/shuffle.png" alt="shuffle" class="icon">
+                                <i class="fa-solid fa-shuffle fa-icon"></i>
                             </button>
                             <div class="contorls-block">
                                 <button class="button prev">
-                                    <img src="img/prev.png" alt="prev" class="icon">
+                                    <i class="fa-solid fa-backward fa-icon"></i>
                                 </button>
                                 <button class="button action play">
-                                    <img src="img/action.png" alt="action" class="icon">
+                                    <i class="fa-solid fa-play fa-icon"></i>
                                 </button>
                                 <button class="button next">
-                                    <img src="img/prev.png" alt="next" class="icon">
+                                    <i class="fa-solid fa-forward fa-icon rotate"></i>
                                 </button>
                             </div>
                             <button class="button repeat">
-                                <img src="img/repeat.png" alt="repeat" class="icon">
+                                <i class="fa-solid fa-repeat fa-icon"></i>
                             </button>
                         </div>
                     </div>
